--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GAME OF LIFE</title>
+	<title>game of life</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="script.js"></script>
+	<script src="script2.js"></script>
 </head>
 <body>
-	<table id="tab"></table>
 </body>
 </html>
