--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>game of life</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="script2.js"></script>
+	<script src="script.js"></script>
 </head>
 <body>
+<div id="life"></div>
 </body>
 </html>
